added typed cast, index.cshtml and bug.cs
added two new type cast lists for buglist and tasklist, deployed new
code in controller.

--- a/bug315/bug315.csproj
+++ b/bug315/bug315.csproj
@@ -115,7 +115,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Bug.cs" />
+    <Compile Include="Models\TaskToDo.cs" />
     <Compile Include="Models\WorkItem.cs" />
+    <Compile Include="Models\WorkItemIndexVm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
